stagecraft/applistagecraft/static/applistagecraft/css/styles.css
.Site {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

.Site-content {
    flex: 1;
}


/* ----------------------------------- search prt in offres ---------------------------------------- */
search input {
	position: absolute;
    right: 5%;
    top: 50;
	border-radius: 25px;
	width: 300px;
	height: 30px;
}

search input:focus {
	border-color: transparent;
}

.trouve {
	background-color: hotpink;
}

search input:valid {
	border: 2px solid green ;
}

search input:invalid {
	border: 2px solid red ;
}

/* --------------------------- Details of an offer ----------------------------------- */
/* Titres */
h1 {
    letter-spacing: 1px;
    font-size: 2.4rem;
}

/* Labels */
.fw-semibold {
    font-size: 1.1rem;
    color: #333;
    margin-bottom: 6px;
}

/* Cartes d'information */
.card {
    border-radius: 14px;
    border: 1px solid #ddd;
}

.card-body p {
    margin: 0;
    font-size: 1rem;
    line-height: 1.5;
}

/* Ombre légère façon "carte d'offre" */
.card.shadow-sm {
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.06) !important;
}

/* Responsive */
@media (max-width: 768px) {
    h1 {
        font-size: 1.8rem;
    }
}

/* --------------------------- Dashboard ----------------------------------- */
.dashboard {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    min-width: 15%;
}
 
.toggle-icon {
    transition: transform 0.3s ease;
}

.btn-toggle[aria-expanded="true"] .toggle-icon {
    transform: rotate(90deg);
}

.btn:focus,.btn:active {
    outline: none !important;
    box-shadow: none;
 }

 .sidebar-margin {
    margin-left: 15% !important;
}

.topbar-margin {
    margin-top: 5%;
}

